--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -51,3 +51,5 @@ dateOfSubmit=Date of submission
 supervisorStatus=Supervisor status
 status=Status
 acceptDate=Accept date
+logout=Log out
+user=User
