--- a/src/main/resources/lang/messages_lv.properties
+++ b/src/main/resources/lang/messages_lv.properties
@@ -51,4 +51,6 @@ dateOfSubmit=Iesnigsanas datums
 supervisorStatus=Vadītāja status
 status=Status
 acceptDate=Apstiprināšanas datums
+logout=Iziet
+user=Lietotājs
 
